--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-router": "^6.15.0",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
     "recharts": "^2.8.0",
     "redux": "^4.2.1",
     "styled-components": "^6.0.7",
