--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-toastify": "^9.1.3",
     "recharts": "^2.8.0",
     "redux": "^4.2.1",
+    "redux-localstorage": "^0.4.1",
     "styled-components": "^6.0.7",
     "web-vitals": "^2.1.4"
   },
