--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "@testing-library/user-event": "^13.5.0",
     "ahooks": "^3.7.8",
     "antd": "^5.8.4",
+    "axios": "^1.5.0",
     "chart.js": "^4.4.0",
     "dayjs": "^1.11.9",
+    "json-server": "^0.17.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-google-recaptcha": "^3.1.0",
+    "react-query": "^3.39.3",
     "react-redux": "^8.1.2",
     "react-router": "^6.15.0",
     "react-router-dom": "^6.15.0",
@@ -30,7 +33,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "start-server": "json-server --watch db.json --port 3004"
   },
   "eslintConfig": {
     "extends": [
